// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";

enum SpannerInstanceStateEnum {
  SpannerInstanceStateEnumNO_VALUE_DO_NOT_USE = 0;
  SpannerInstanceStateEnumCREATING = 1;
  SpannerInstanceStateEnumREADY = 2;
}

message SpannerInstance {
  string name = 1;
  string project = 2;
  string config = 3;
  string display_name = 4;
  int64 node_count = 5;
  SpannerInstanceStateEnum state = 6;
  map<string, string> labels = 7;
}

message ApplySpannerInstanceRequest {
  SpannerInstance resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteSpannerInstanceRequest {
  string service_account_file = 1;
  SpannerInstance resource = 2;
}

message ListSpannerInstanceRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListSpannerInstanceResponse {
  repeated SpannerInstance items = 1;
}

service SpannerInstanceService {
  rpc ApplySpannerInstance(ApplySpannerInstanceRequest) returns (SpannerInstance);
  rpc DeleteSpannerInstance(DeleteSpannerInstanceRequest) returns (google.protobuf.Empty);
  rpc ListSpannerInstance(ListSpannerInstanceRequest) returns (ListSpannerInstanceResponse);
}
